--- a/Kerajel.Primitives/Kerajel.Primitives.csproj
+++ b/Kerajel.Primitives/Kerajel.Primitives.csproj
@@ -4,6 +4,5 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PlatformTarget>x86</PlatformTarget>
-		<Platforms>AnyCPU;x86</Platforms>	</PropertyGroup>
+	</PropertyGroup>
 </Project>
